--- a/notebooks/ETL Pipeline Preparation.ipynb
+++ b/notebooks/ETL Pipeline Preparation.ipynb
@@ -19,9 +19,9 @@
    "outputs": [],
    "source": [
     "# import libraries\n",
-    "import pandas as  pd\n",
+    "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
-    "import re\n"
+    "import re"
    ]
   },
   {
@@ -119,7 +119,7 @@
    ],
    "source": [
     "# load messages dataset\n",
-    "messages = pd.read_csv('../data/messages.csv')\n",
+    "messages = pd.read_csv(\"../data/messages.csv\")\n",
     "messages.head()"
    ]
   },
@@ -227,7 +227,7 @@
    ],
    "source": [
     "# load categories dataset\n",
-    "categories = pd.read_csv('../data/categories.csv')\n",
+    "categories = pd.read_csv(\"../data/categories.csv\")\n",
     "categories.head()"
    ]
   },
@@ -374,7 +374,7 @@
    ],
    "source": [
     "# merge datasets\n",
-    "df = pd.merge(messages,categories,on=['id'],how='inner')\n",
+    "df = pd.merge(messages, categories, on=[\"id\"], how=\"inner\")\n",
     "df.head()"
    ]
   },
@@ -609,7 +609,7 @@
    ],
    "source": [
     "# create a dataframe of the 36 individual category columns\n",
-    "categories = df['categories'].str.split(';',expand=True)\n",
+    "categories = df[\"categories\"].str.split(\";\", expand=True)\n",
     "categories.head()"
    ]
   },
@@ -631,9 +631,9 @@
     "row = categories.loc[0]\n",
     "\n",
     "# use this row to extract a list of new column names for categories.\n",
-    "# one way is to apply a lambda function that takes everything \n",
+    "# one way is to apply a lambda function that takes everything\n",
     "# up to the second to last character of each string with slicing\n",
-    "category_colnames = list(row.apply(lambda x: re.sub('-\\d','',x)))\n",
+    "category_colnames = list(row.apply(lambda x: re.sub(\"-\\d\", \"\", x)))\n",
     "print(category_colnames)"
    ]
   },
@@ -877,6 +877,119 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    20246\n",
+      "0     6140\n",
+      "Name: related, dtype: int64\n",
+      "0    21873\n",
+      "1     4513\n",
+      "Name: request, dtype: int64\n",
+      "0    26265\n",
+      "1      121\n",
+      "Name: offer, dtype: int64\n",
+      "0    15432\n",
+      "1    10954\n",
+      "Name: aid_related, dtype: int64\n",
+      "0    24287\n",
+      "1     2099\n",
+      "Name: medical_help, dtype: int64\n",
+      "0    25067\n",
+      "1     1319\n",
+      "Name: medical_products, dtype: int64\n",
+      "0    25661\n",
+      "1      725\n",
+      "Name: search_and_rescue, dtype: int64\n",
+      "0    25915\n",
+      "1      471\n",
+      "Name: security, dtype: int64\n",
+      "0    25523\n",
+      "1      863\n",
+      "Name: military, dtype: int64\n",
+      "0    26386\n",
+      "Name: child_alone, dtype: int64\n",
+      "0    24702\n",
+      "1     1684\n",
+      "Name: water, dtype: int64\n",
+      "0    23430\n",
+      "1     2956\n",
+      "Name: food, dtype: int64\n",
+      "0    24044\n",
+      "1     2342\n",
+      "Name: shelter, dtype: int64\n",
+      "0    25976\n",
+      "1      410\n",
+      "Name: clothing, dtype: int64\n",
+      "0    25780\n",
+      "1      606\n",
+      "Name: money, dtype: int64\n",
+      "0    26085\n",
+      "1      301\n",
+      "Name: missing_people, dtype: int64\n",
+      "0    25506\n",
+      "1      880\n",
+      "Name: refugees, dtype: int64\n",
+      "0    25182\n",
+      "1     1204\n",
+      "Name: death, dtype: int64\n",
+      "0    22922\n",
+      "1     3464\n",
+      "Name: other_aid, dtype: int64\n",
+      "0    24677\n",
+      "1     1709\n",
+      "Name: infrastructure_related, dtype: int64\n",
+      "0    25174\n",
+      "1     1212\n",
+      "Name: transport, dtype: int64\n",
+      "0    25041\n",
+      "1     1345\n",
+      "Name: buildings, dtype: int64\n",
+      "0    25848\n",
+      "1      538\n",
+      "Name: electricity, dtype: int64\n",
+      "0    26227\n",
+      "1      159\n",
+      "Name: tools, dtype: int64\n",
+      "0    26103\n",
+      "1      283\n",
+      "Name: hospitals, dtype: int64\n",
+      "0    26266\n",
+      "1      120\n",
+      "Name: shops, dtype: int64\n",
+      "0    26077\n",
+      "1      309\n",
+      "Name: aid_centers, dtype: int64\n",
+      "0    25231\n",
+      "1     1155\n",
+      "Name: other_infrastructure, dtype: int64\n",
+      "0    19043\n",
+      "1     7343\n",
+      "Name: weather_related, dtype: int64\n",
+      "0    24209\n",
+      "1     2177\n",
+      "Name: floods, dtype: int64\n",
+      "0    23922\n",
+      "1     2464\n",
+      "Name: storm, dtype: int64\n",
+      "0    26104\n",
+      "1      282\n",
+      "Name: fire, dtype: int64\n",
+      "0    23925\n",
+      "1     2461\n",
+      "Name: earthquake, dtype: int64\n",
+      "0    25853\n",
+      "1      533\n",
+      "Name: cold, dtype: int64\n",
+      "0    25007\n",
+      "1     1379\n",
+      "Name: other_weather, dtype: int64\n",
+      "0    21273\n",
+      "1     5113\n",
+      "Name: direct_report, dtype: int64\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -1084,9 +1197,13 @@
     }
    ],
    "source": [
+    "# All category values are between 0 and 2\n",
     "for column in categories:\n",
     "    # set each value to be the last character of the string\n",
     "    categories[column] = categories[column].astype(str).str[-1]\n",
+    "    # Convert all the categories to binary values\n",
+    "    categories[column] = categories[column].str.replace(\"2\", \"1\")\n",
+    "    print(categories[column].value_counts(dropna=False))\n",
     "    # convert column from string to numeric\n",
     "    categories[column] = pd.to_numeric(categories[column])\n",
     "categories.head()"
@@ -1197,7 +1314,7 @@
    "source": [
     "# drop the original categories column from `df`\n",
     "\n",
-    "df = df.drop(columns=['categories'])\n",
+    "df = df.drop(columns=[\"categories\"])\n",
     "df.head()"
    ]
   },
@@ -1422,7 +1539,7 @@
    ],
    "source": [
     "# concatenate the original dataframe with the new `categories` dataframe\n",
-    "df = pd.concat([df,categories],axis=1)\n",
+    "df = pd.concat([df, categories], axis=1)\n",
     "df.head()"
    ]
   },
@@ -1464,7 +1581,7 @@
     {
      "data": {
       "text/plain": [
-       "170"
+       "171"
       ]
      },
      "execution_count": 14,
@@ -1474,7 +1591,7 @@
    ],
    "source": [
     "# check number of duplicates\n",
-    "df.duplicated(keep='first').sum()"
+    "df.duplicated(keep=\"first\").sum()"
    ]
   },
   {
@@ -1505,7 +1622,7 @@
    ],
    "source": [
     "# check number of duplicates\n",
-    "df.duplicated(keep='first').sum()"
+    "df.duplicated(keep=\"first\").sum()"
    ]
   },
   {
@@ -1516,7 +1633,7 @@
     {
      "data": {
       "text/plain": [
-       "(26216, 40)"
+       "(26215, 40)"
       ]
      },
      "execution_count": 17,
@@ -1765,8 +1882,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('sqlite:///disaster.db')\n",
-    "df.to_sql('encoded_messages', engine, index=False)"
+    "engine = create_engine(\"sqlite:///disaster.db\")\n",
+    "df.to_sql(\"encoded_messages\", engine, index=False)"
    ]
   },
   {
@@ -1787,7 +1904,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1801,7 +1918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
